--- a/CSS_3/07-ResponsiveCSS_3/02-Flexbox.html
+++ b/CSS_3/07-ResponsiveCSS_3/02-Flexbox.html
@@ -13,6 +13,28 @@
 
     <h1>Flexbox</h1>
 
+    <header>
+        <div class="header_row">
+            <div class="logo">
+                <a href="#">
+                    <img src="../../images/Football.png" alt="">
+                </a>
+            </div>
+            <nav id="main-navigation">
+                <ul>
+                    <li>Item_1</li>
+                    <li>Item_2</li>
+                    <li>Item_3</li>
+                    <li>Item_4</li>
+                    <li>Item_5</li>
+                    <li>Item_6</li>
+                    <li>Item_7</li>
+                    <li>Item_8</li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
     <div class="row">
         <div class="col col-1">
             <h2>This is column_1</h2>
@@ -34,6 +56,31 @@
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod, quae, eligendi autem, quam impedit consectetur culpa reiciendis quo fuga ab similique adipisci doloremque? Inventore, at? Odio, ut. Vitae, cupiditate dolorem.
             </p>
         </div>
+    </div>
+
+    <div id="section_1">
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
     </div>
 
 </body>
