--- a/goggles/index.html
+++ b/goggles/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata|Poppins:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/stylesheets/main.css">
     <script src="https://kit.fontawesome.com/b06605e970.js"></script>
 </head>
@@ -14,8 +15,8 @@
 
     <div id="container">
         <header id="header">
-            <div class="header_top">
-                <div class="container">
+            <div class="container">
+                <div class="header_top">
                     <div class="row">
                         <div class="help-desk">
                             <span>Need Help</span>
@@ -23,7 +24,9 @@
                             <i class="fas fa-phone"></i> <span>Call 12345678099</span>
                         </div>
                         <div class="logo">
-                            <a href="#">Goggles</a>
+                            <h1>
+                                <a href="#">Goggles</a>
+                            </h1>
                         </div>
                         <div class="user_section">
                             <ul>
@@ -32,8 +35,9 @@
                                         <i class="fas fa-user"></i>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="cart-box">
                                     <a href="#">
+                                        <span>My Cart</span>
                                         <i class="fas fa-cart-arrow-down"></i>
                                     </a>
                                 </li>
@@ -47,7 +51,38 @@
                             <ul>
                                 <li><a href="#">Home</a></li>
                                 <li><a href="#">About</a></li>
-                                <li><a href="#">Feature</a></li>
+                                <li>
+                                    <a href="#">Feature</a>
+                                    <div class="dropdown">
+                                        <div class="row">
+                                            <div class="col">
+                                                <h2>Title Goes Her</h2>
+                                                <ul>
+                                                    <li><a href="#">Designer Glass</a></li>
+                                                    <li><a href="#">Ray-Ban</a></li>
+                                                    <li><a href="#">Prescription Glasses</a></li>
+                                                </ul>
+                                                <h2>View More Pages</h2>
+                                                <ul>
+                                                    <li><a href="#">About</a></li>
+                                                    <li><a href="#">Customers</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="col">
+                                                <h2>Title Goes Here</h2>
+                                                <a href="#">
+                                                    <img class="w-100" src="https://demo.w3layouts.com/demos_new/template_demo/07-08-2018/goggles-web_Free/1521872807/web/images/g2.jpg" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="col">
+                                                <h2>Title Goes Here</h2>
+                                                <a href="#">
+                                                    <img class="w-100" src="https://demo.w3layouts.com/demos_new/template_demo/07-08-2018/goggles-web_Free/1521872807/web/images/g2.jpg" alt="">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
                                 <li><a href="#">Shop</a></li>
                                 <li><a href="#">Contact</a></li>
                             </ul>
@@ -59,6 +94,81 @@
                 </div>
             </div>
         </header>
+
+        <!-- Banner -->
+        <div id="banner">
+            <div class="slide">
+                <figure>
+                    <img class="w-100" src="https://demo.w3layouts.com/demos_new/template_demo/07-08-2018/goggles-web_Free/1521872807/web/images/banner1.jpg" alt="">
+                </figure>
+                <div class="desc-wrapper">
+                    <div class="inner-wrapper">
+                        <div class="desc">
+                            <h2>Men's eyewear</h2>
+                            <p>Cool summer sale 50% off</p>
+                            <a href="#" class="btn-1">Shop Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <figure>
+                    <img class="w-100" src="https://demo.w3layouts.com/demos_new/template_demo/07-08-2018/goggles-web_Free/1521872807/web/images/banner2.jpg" alt="">
+                </figure>
+                <div class="desc-wrapper">
+                    <div class="inner-wrapper">
+                        <div class="desc">
+                            <h2>Men's eyewear</h2>
+                            <p>Cool summer sale 50% off</p>
+                            <a href="#" class="btn-1">Shop Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <figure>
+                    <img class="w-100" src="https://demo.w3layouts.com/demos_new/template_demo/07-08-2018/goggles-web_Free/1521872807/web/images/banner3.jpg" alt="">
+                </figure>
+                <div class="desc-wrapper">
+                    <div class="inner-wrapper">
+                        <div class="desc">
+                            <h2>Men's eyewear</h2>
+                            <p>Cool summer sale 50% off</p>
+                            <a href="#" class="btn-1">Shop Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <figure>
+                    <img class="w-100" src="https://demo.w3layouts.com/demos_new/template_demo/07-08-2018/goggles-web_Free/1521872807/web/images/banner4.jpg" alt="">
+                </figure>
+                <div class="desc-wrapper">
+                    <div class="inner-wrapper">
+                        <div class="desc">
+                            <h2>Men's eyewear</h2>
+                            <p>Cool summer sale 50% off</p>
+                            <a href="#" class="btn-1">Shop Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <figure>
+                    <img class="w-100" src="https://demo.w3layouts.com/demos_new/template_demo/07-08-2018/goggles-web_Free/1521872807/web/images/banner1.jpg" alt="">
+                </figure>
+                <div class="desc-wrapper">
+                    <div class="inner-wrapper">
+                        <div class="desc">
+                            <h2>Men's eyewear</h2>
+                            <p>Cool summer sale 50% off</p>
+                            <a href="#" class="btn-1">Shop Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
 </body>
