--- a/goggles/index.html
+++ b/goggles/index.html
@@ -169,6 +169,215 @@
             </div>
         </div>
 
+
+        <section id="section_1">
+            <div class="container">
+                <h2>New Arrivals for You</h2>
+                <div class="row">
+                    <div class="col">
+                        <div class="card">
+                            <figure>
+                                <a href="#">
+                                    <img class="w-100" src="https://demo.w3layouts.com/demos_new/template_demo/07-08-2018/goggles-web_Free/1521872807/web/images/s1.jpg" alt="">
+                                </a>
+                            </figure>
+                            <div class="desc">
+                                <div class="row">
+                                    <div class="p_name">
+                                        <h6>
+                                            <a href="#">Farenheit (Gray)</a>
+                                        </h6>
+                                    </div>
+                                    <div class="cart">
+                                        <a href="#">
+                                            <i class="fas fa-cart-plus"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                                <p>$575.00</p>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <figure>
+                                <a href="#">
+                                    <img class="w-100" src="https://demo.w3layouts.com/demos_new/template_demo/07-08-2018/goggles-web_Free/1521872807/web/images/s1.jpg" alt="">
+                                </a>
+                            </figure>
+                            <div class="desc">
+                                <div class="row">
+                                    <div class="p_name">
+                                        <h6>
+                                            <a href="#">Farenheit (Gray)</a>
+                                        </h6>
+                                    </div>
+                                    <div class="cart">
+                                        <a href="#">
+                                            <i class="fas fa-cart-plus"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                                <p>$575.00</p>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <figure>
+                                <a href="#">
+                                    <img class="w-100" src="https://demo.w3layouts.com/demos_new/template_demo/07-08-2018/goggles-web_Free/1521872807/web/images/s1.jpg" alt="">
+                                </a>
+                            </figure>
+                            <div class="desc">
+                                <div class="row">
+                                    <div class="p_name">
+                                        <h6>
+                                            <a href="#">Farenheit (Gray)</a>
+                                        </h6>
+                                    </div>
+                                    <div class="cart">
+                                        <a href="#">
+                                            <i class="fas fa-cart-plus"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                                <p>$575.00</p>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <figure>
+                                <a href="#">
+                                    <img class="w-100" src="https://demo.w3layouts.com/demos_new/template_demo/07-08-2018/goggles-web_Free/1521872807/web/images/s1.jpg" alt="">
+                                </a>
+                            </figure>
+                            <div class="desc">
+                                <div class="row">
+                                    <div class="p_name">
+                                        <h6>
+                                            <a href="#">Farenheit (Gray)</a>
+                                        </h6>
+                                    </div>
+                                    <div class="cart">
+                                        <a href="#">
+                                            <i class="fas fa-cart-plus"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                                <p>$575.00</p>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <figure>
+                                <a href="#">
+                                    <img class="w-100" src="https://demo.w3layouts.com/demos_new/template_demo/07-08-2018/goggles-web_Free/1521872807/web/images/s1.jpg" alt="">
+                                </a>
+                            </figure>
+                            <div class="desc">
+                                <div class="row">
+                                    <div class="p_name">
+                                        <h6>
+                                            <a href="#">Farenheit (Gray)</a>
+                                        </h6>
+                                    </div>
+                                    <div class="cart">
+                                        <a href="#">
+                                            <i class="fas fa-cart-plus"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                                <p>$575.00</p>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <figure>
+                                <a href="#">
+                                    <img class="w-100" src="https://demo.w3layouts.com/demos_new/template_demo/07-08-2018/goggles-web_Free/1521872807/web/images/s1.jpg" alt="">
+                                </a>
+                            </figure>
+                            <div class="desc">
+                                <div class="row">
+                                    <div class="p_name">
+                                        <h6>
+                                            <a href="#">Farenheit (Gray)</a>
+                                        </h6>
+                                    </div>
+                                    <div class="cart">
+                                        <a href="#">
+                                            <i class="fas fa-cart-plus"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                                <p>$575.00</p>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <figure>
+                                <a href="#">
+                                    <img class="w-100" src="https://demo.w3layouts.com/demos_new/template_demo/07-08-2018/goggles-web_Free/1521872807/web/images/s1.jpg" alt="">
+                                </a>
+                            </figure>
+                            <div class="desc">
+                                <div class="row">
+                                    <div class="p_name">
+                                        <h6>
+                                            <a href="#">Farenheit (Gray)</a>
+                                        </h6>
+                                    </div>
+                                    <div class="cart">
+                                        <a href="#">
+                                            <i class="fas fa-cart-plus"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                                <p>$575.00</p>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <figure>
+                                <a href="#">
+                                    <img class="w-100" src="https://demo.w3layouts.com/demos_new/template_demo/07-08-2018/goggles-web_Free/1521872807/web/images/s1.jpg" alt="">
+                                </a>
+                            </figure>
+                            <div class="desc">
+                                <div class="row">
+                                    <div class="p_name">
+                                        <h6>
+                                            <a href="#">Farenheit (Gray)</a>
+                                        </h6>
+                                    </div>
+                                    <div class="cart">
+                                        <a href="#">
+                                            <i class="fas fa-cart-plus"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                                <p>$575.00</p>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </div>
 
 </body>
