--- a/JS_Backup/FormValidation/form.html
+++ b/JS_Backup/FormValidation/form.html
@@ -6,11 +6,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="validation.js"></script>
 </head>
 
 <body>
 
+    <h1>Registration Form</h1>
 
+    <table>
+        <tr>
+            <td>Enter Name</td>
+            <td>
+                <input type="text" placeholder="Enter your name" id="box_1">
+            </td>
+            <td>
+                <span class="err"></span>
+            </td>
+        </tr>
+        <tr>
+            <td>Enter Email</td>
+            <td>
+                <input type="text" placeholder="Enter your email" id="box_2">
+            </td>
+            <td>
+                <span class="err"></span>
+            </td>
+        </tr>
+        <tr>
+            <td>Enter Password</td>
+            <td>
+                <input type="password" placeholder="Enter your password" id="box_3">
+            </td>
+            <td>
+                <span class="err"></span>
+            </td>
+        </tr>
+        <tr>
+            <td>Confirm Password</td>
+            <td>
+                <input type="password" placeholder="Confirm Password" id="box_4">
+            </td>
+            <td>
+                <span class="err"></span>
+            </td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>
+                <input type="submit" value="Register">
+            </td>
+        </tr>
+    </table>
 
 </body>
 
