--- a/JS_Backup/MusicPlayer/index.html
+++ b/JS_Backup/MusicPlayer/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/stylesheets/main.css">
 
     <script src="assets/javascripts/songs.js"></script>
+    <script src="assets/javascripts/model.js"></script>
     <script src="assets/javascripts/main.js"></script>
 </head>
 
@@ -64,14 +65,15 @@
 
         <section id="section_1">
             <div class="row">
-                <div class="col-md-7">
+                <div class="col-md-8">
                     <h2 class="text-center">Featured Songs</h2>
                     <ul id="songsList">
 
                     </ul>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-4">
                     <h2 class="text-center">Playlist</h2>
+                    <button id="savePlaylist" class="btn btn-success w-100">Save Playlist</button>
                     <ul id="playList">
 
                     </ul>
